--- a/templates/accessoire/show.html.twig
+++ b/templates/accessoire/show.html.twig
@@ -3,24 +3,40 @@
 {% block title %}Accessoire{% endblock %}
 
 {% block body %}
-    <h1>Accessoire</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ accessoire.id }}</td>
-            </tr>
-            <tr>
-                <th>Libelle</th>
-                <td>{{ accessoire.libelle }}</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="show-container">
+    <h1><i class="fa-solid fa-icons"></i> Détails de l'Accessoire</h1>
 
-    <a href="{{ path('app_accessoire_index') }}">back to list</a>
+    <div class="info-grid">
+        
+        {# Bloc ID #}
+        <div class="info-item">
+            <span class="info-label"><i class="fa-solid fa-hashtag"></i> Id</span>
+            <span class="info-value">{{ accessoire.id }}</span>
+        </div>
 
-    <a href="{{ path('app_accessoire_edit', {'id': accessoire.id}) }}">edit</a>
+        {# Bloc Libelle #}
+        <div class="info-item">
+            <span class="info-label"><i class="fa-solid fa-tag"></i> Libelle</span>
+            <span class="info-value">{{ accessoire.libelle }}</span>
+        </div>
+        
+    </div>
 
-    {{ include('accessoire/_delete_form.html.twig') }}
+    <div class="actions">
+        {# Bouton Retour #}
+        <a href="{{ path('app_accessoire_index') }}" class="btn-action btn-back">
+            <i class="fa-solid fa-arrow-left"></i> Retour à la liste
+        </a>
+
+        {# Bouton Modifier #}
+        <a href="{{ path('app_accessoire_edit', {'id': accessoire.id}) }}" class="btn-action btn-edit">
+            <i class="fa-solid fa-pen-to-square"></i> Modifier
+        </a>
+
+        {# Bouton Supprimer #}
+        {{ include('accessoire/_delete_form.html.twig') }}
+    </div>
+
+</div>
 {% endblock %}
