--- a/templates/eleve/show.html.twig
+++ b/templates/eleve/show.html.twig
@@ -1,58 +1,78 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Eleve{% endblock %}
+{% block title %}Fiche Élève : {{ eleve.prenom }} {{ eleve.nom }}{% endblock %}
 
 {% block body %}
-    <h1>Eleve</h1>
 
-    <table class="table">
-        <tbody>
-            
-            <tr>
-                <th>Nom</th>
-                <td>{{ eleve.nom }}</td>
-            </tr>
-            <tr>
-                <th>Prenom</th>
-                <td>{{ eleve.prenom }}</td>
-            </tr>
-            <tr>
-                <th>NumRue</th>
-                <td>{{ eleve.numRue }}</td>
-            </tr>
-            <tr>
-                <th>Rue</th>
-                <td>{{ eleve.rue }}</td>
-            </tr>
-            <tr>
-                <th>Copos</th>
-                <td>{{ eleve.copos }}</td>
-            </tr>
-            <tr>
-                <th>Ville</th>
-                <td>{{ eleve.ville }}</td>
-            </tr>
-            <tr>
-                <th>Tel</th>
-                <td>{{ eleve.tel }}</td>
-            </tr>
-            <tr>
-                <th>Mail</th>
-                <td>{{ eleve.mail }}</td>
-            </tr>
-             <tr>
-                <th>Responsable</th>
-                <td>{% for responsable in eleve.responsable %}
-                    {{ responsable.prenom }}
-                {%endfor%}
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<div class="show-container">
+    <h1><i class="fa-solid fa-user-graduate"></i> Élève : {{ eleve.prenom }} {{ eleve.nom }}</h1>
 
-    <a href="{{ path('app_eleve_index') }}">back to list</a>
+    <div class="info-grid">
 
-    <a href="{{ path('app_eleve_edit', {'id': eleve.id}) }}">edit</a>
+        {# --- IDENTITÉ --- #}
+        <div class="info-item">
+            <span class="info-label"><i class="fa-solid fa-user"></i> Nom</span>
+            <span class="info-value">{{ eleve.nom }}</span>
+        </div>
 
-    {{ include('eleve/_delete_form.html.twig') }}
+        <div class="info-item">
+            <span class="info-label"><i class="fa-regular fa-user"></i> Prénom</span>
+            <span class="info-value">{{ eleve.prenom }}</span>
+        </div>
+
+        {# --- CONTACT --- #}
+        <div class="info-item">
+            <span class="info-label"><i class="fa-solid fa-envelope"></i> Email</span>
+            <span class="info-value">{{ eleve.mail }}</span>
+        </div>
+
+        <div class="info-item">
+            <span class="info-label"><i class="fa-solid fa-phone"></i> Téléphone</span>
+            <span class="info-value">{{ eleve.tel }}</span>
+        </div>
+
+        {# --- ADRESSE (Regroupée pour plus de lisibilité) --- #}
+        <div class="info-item" style="grid-column: 1 / -1;">
+            <span class="info-label"><i class="fa-solid fa-location-dot"></i> Adresse Complète</span>
+            <span class="info-value">
+                {{ eleve.numRue }} {{ eleve.rue }}<br>
+                {{ eleve.copos }} {{ eleve.ville }}
+            </span>
+        </div>
+
+        {# --- RESPONSABLES --- #}
+        <div class="info-item" style="grid-column: 1 / -1;">
+            <span class="info-label"><i class="fa-solid fa-users-rays"></i> Responsable(s)</span>
+            <div class="info-value list-chips">
+                {% if eleve.responsable is not empty %}
+                    {% for responsable in eleve.responsable %}
+                        <span class="chip">
+                            <i class="fa-solid fa-user-shield"></i> {{ responsable.prenom }} {{ responsable.nom|default('') }}
+                        </span>
+                    {% endfor %}
+                {% else %}
+                    <span style="color: #999; font-style: italic;">Aucun responsable associé</span>
+                {% endif %}
+            </div>
+        </div>
+
+    </div>
+
+    {# --- ACTIONS --- #}
+    <div class="actions">
+        {# Bouton Retour #}
+        <a href="{{ path('app_eleve_index') }}" class="btn-action btn-back">
+            <i class="fa-solid fa-arrow-left"></i> Retour à la liste
+        </a>
+
+        {# Bouton Modifier #}
+        <a href="{{ path('app_eleve_edit', {'id': eleve.id}) }}" class="btn-action btn-edit">
+            <i class="fa-solid fa-pen-to-square"></i> Modifier
+        </a>
+
+        {# Bouton Supprimer #}
+        {{ include('eleve/_delete_form.html.twig') }}
+    </div>
+
+</div>
 {% endblock %}
